--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
